--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-16 01:25:46
+ * @LastEditTime: 2019-12-16 19:51:29
  -->
  <html>
     <head>
@@ -22,6 +22,15 @@
     </head>
     <body>
         <div class="div1">
+            <table border="0">
+                <h2>提问的智慧</h2>
+                <tr>
+                    <td class="td1">提问的智慧</td>
+                    <td class="td2"><a href="https://github.com/tvvocold/How-To-Ask-Questions-The-Smart-Way">How To Ask Questions The Smart Way</a></td>
+                </tr>
+            </table>
+        </div>
+        <div>
             <table>
                 <h2>在线工具</h2>
                 <tr>
@@ -318,7 +327,7 @@
                 </tr>
             </table>
         </div>
-        <div class="div2">
+        <div>
             <table border="0">
                 <h2>知道创宇研发技能表v3.1</h2>
                 <tr>
@@ -327,7 +336,16 @@
                 </tr>
             </table>
         </div>
-    
+        <div class="div2">
+            <table border="0">
+                <h2>编程的智慧</h2>
+                <tr>
+                    <td class="td1">编程的智慧</td>
+                    <td class="td2"><a href="programming_philosophy/programming-philosophy.html">programming philosophy</a></td>
+                </tr>
+            </table>
+        </div>
+
         <script type="text/javascript">
             var aTagArr = [].slice.apply(document.getElementsByTagName("a"));
     
