--- a/single/Knownsec_RD_Checklist_v3.1/v3.1.html
+++ b/single/Knownsec_RD_Checklist_v3.1/v3.1.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!--This file has been created with toxhtml.xsl-->
 <head>
-        meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>知道创宇研发技能表v3.1
       2016/5/18 发布
     
