--- a/static/single/index.html
+++ b/static/single/index.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-16 19:58:21
+ * @LastEditTime: 2019-12-20 10:30:33
  -->
  <html>
     <head>
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
         <title>links</title>
         <style type="text/css">
-            body{background-image: url(./img/single_bg.jpg)}
+            body{background-image: url(/img/single_bg.jpg)}
             .div1{width:65%; margin:50px auto auto auto;}
             .div2{width:65%; margin:auto auto 50px auto;}
             div{width:65%; margin:0 auto; z-index:-1}
