--- a/single/index.html
+++ b/single/index.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-20 10:30:33
+ * @LastEditTime: 2019-12-24 14:10:26
  -->
  <html>
     <head>
@@ -287,6 +287,10 @@
                 <tr>
                     <td class="td1">SQL Injection Forum</td>
                     <td class="td2"><a href="http://forum.sqliwiki.com">http://forum.sqliwiki.com</a></td>
+                </tr>
+                <tr>
+                    <td class="td1">SQL Injection</td>
+                    <td class="td2"><a href="http://pentestmonkey.net/category/cheat-sheet/sql-injection">http://pentestmonkey.net/category/cheat-sheet/sql-injection</a></td>
                 </tr>
                 <tr>
                     <td class="td1">XSS Filter Evasion Cheat Sheet</td>
