--- a/single/index.html
+++ b/single/index.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-24 14:10:26
+ * @LastEditTime : 2020-03-26 10:19:24
  -->
  <html>
     <head>
@@ -40,8 +40,8 @@
                 <tr>
                     <td class="td1">在线子域名爆破</td>
                     <td class="td2">
-                        <a href="https://phpinfo.me/domain">https://phpinfo.me/domain</a> || 
-                        <a href="http://www.itxueke.com/tools/subdomain">http://www.itxueke.com/tools/subdomain</a>
+                        <a href="https://phpinfo.me/domain">phpinfo.me</a> || 
+                        <a href="https://pentest-tools.com/information-gathering/find-subdomains-of-domain">Pentest-Tools</a>
                     </td>
                 </tr>
                 <tr>
