--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
-        0x00 安装 ➜ brew install postgresql ➜ echo 'export PATH=&quot;/usr/local/Cellar/postgresql/11.4/bin:$PATH&quot;' &gt;&gt; ~/.zshrc ➜ source ~/.zshrc -- 初始化数据库 ➜ initdb /usr/local/var/postgres ➜ pg_ctl -D /usr/local/var/postgres -l /usr/local/var/log/postgres/postgres.log start -- 创建用户名数据库 ➜ createdb  0x01 简单操作 reber=# \password #设置当前登录用户的密码 reber=# \password [user_name] #设置其他用户的密码 reber=# \l #列出所有数据库 reber=# \du #列出所有用户 reber=# \c [database_name] #连接数据库 reber=# \d #列出当前数据库的所有表 reber=# \d [table_name] #列出表结构 reber=# \conninfo #列出当前数据库和连接的信息   连接数据库  ➜ psql #psql连接数据库默认选用的是当前的系统用户 psql (11.
+        0x00 安装 ➜ brew install postgresql ➜ echo 'export PATH=&quot;/usr/local/Cellar/postgresql/11.4/bin:$PATH&quot;' &gt;&gt; ~/.zshrc ➜ source ~/.zshrc -- 初始化数据库 ➜ initdb /usr/local/var/postgres ➜ pg_ctl -D /usr/local/var/postgres -l /usr/local/var/log/postgres.log start  0x01 简单操作  常用操作命令  reber=# \password #设置当前登录用户的密码 reber=# \password [user_name] #设置其他用户的密码 reber=# \l #列出所有数据库 reber=# \du #列出所有用户 reber=# \c [database_name] #连接数据库 reber=# \d #列出当前数据库的所有表 reber=# \d [table_name] #列出表结构 reber=# \conninfo #列出当前数据库和连接的信息   连接数据库  ➜ psql postgres #初始化数据库后会生成默认的数据库 postgres psql (11.
     </p>
 
     
