--- a/static/single/index.html
+++ b/static/single/index.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime : 2020-03-26 10:19:24
+ * @LastEditTime : 2020-08-04 15:32:59
  -->
  <html>
     <head>
@@ -89,27 +89,33 @@
                 <tr>
                     <td class="td1">域名查询</td>
                     <td class="td2">
-                        <a href="http://vxcube.com">http://vxcube.com</a> ||
-                        <a href="https://domainbigdata.com">https://domainbigdata.com</a>
+                        <a href="http://vxcube.com">VxCube</a> ||
+                        <a href="https://domainbigdata.com">DomainBigData</a>
                     </td>
                 </tr>
                 <tr>
                     <td class="td1">临时邮箱</td>
-                    <td class="td2"><a href="http://24mail.chacuo.net">http://24mail.chacuo.net</a></td>
+                    <td class="td2">
+                        <a href="http://24mail.chacuo.net">24mail</a> ||
+                        <a href="http://www.yopmail.com/">YOPmail</a>
+                    </td>
                 </tr>
                 <tr>
                     <td class="td1">临时手机号</td>
                     <td class="td2">
-                        <a href="https://zusms.com/receiving-sms">https://zusms.com/receiving-sms</a> ||
-                        <a href="https://smsreceivefree.com">https://smsreceivefree.com</a> ||
-                        <a href="https://www.yinsixiaohao.com">https://www.yinsixiaohao.com</a>
+                        <a href="https://zusms.com/receiving-sms">云短信</a> ||
+                        <a href="https://www.yinsixiaohao.com">隐私短信</a>
                     </td>
                 </tr>
                 <tr>
-                    <td class="td1">邮箱密码社工库</td>
+                    <td class="td1">密码泄漏查询</td>
                     <td class="td2">
-                        <a href="http://dumpedlqezarfife.onion.lu">http://dumpedlqezarfife.onion.lu</a> ||
-                        <a href="https://haveibeenpwned.com">https://haveibeenpwned.com</a>
+                        <a href="https://passwords.google.com/">Google 密码管理器</a> ||
+                        <a href="https://monitor.firefox.com/">Firefox Monitor</a> ||
+                        <a href="https://haveibeenpwned.com/">Have I Been Pwned</a> ||
+                        <a href="https://intelx.io/">Intelligence X</a> ||
+                        <a href="https://aleph.occrp.org/">OCCRP Aleph</a>
+                        
                     </td>
                 </tr>
                 <tr>
