--- a/single/index.html
+++ b/single/index.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime : 2020-11-09 10:40:43
+ * @LastEditTime : 2020-11-09 15:03:41
  -->
  <html>
     <head>
@@ -99,8 +99,8 @@
                         <a href="http://24mail.chacuo.net">24mail</a> ||
                         <a href="http://www.yopmail.com/">YOPmail</a> ||
                         <a href="https://www.suiyongsuiqi.com/zh/mail/">随用随弃</a> ||
-                        <a href="http://www.5-mail.com/"></a>小鸟临时邮箱</a> ||
-                        <a href="https://mailsac.com/">Mailsac</a> ||
+                        <a href="http://www.5-mail.com/">小鸟临时邮箱</a> ||
+                        <a href="https://mailsac.com/">Mailsac</a>
                     </td>
                 </tr>
                 <tr>
@@ -110,7 +110,7 @@
                         <a href="https://yunduanxin.net/">云短信2</a> ||
                         <a href="https://www.materialtools.com/">云短信3</a> ||
                         <a href="https://jiemahao.com/">接码号</a> ||
-                        <a href="http://www.xnsms.com/"></a>小鸟接码</a>
+                        <a href="http://www.xnsms.com/">小鸟接码</a>
                     </td>
                 </tr>
                 <tr>
