--- a/topics/windows/index.html
+++ b/topics/windows/index.html
@@ -272,7 +272,7 @@ System：Windows10 Pro x64 Shadowsocks：Shadowsocks v2.5.2.0 Proxifier：Proxif
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
         0x00 首先在github上新建仓库 0x01 本地新建仓库  下载安装hugo  为hugo添加环境变量  下载安装github客户端  新建仓库  下载主题
 可以在https://github.com/spf13/hugoThemes 下载你喜欢的主题
- 使用主题并查看效果   0x02 本地环境配置  本地生成秘钥  在github保存秘钥  测试公钥是否添加成功  设置本地用户名和邮箱   0x03 配置config.toml # 将reber-9全部替换为你github的账户名，另外你也可以进行一些基本的设置 baseurl = &quot;http://reber-9.github.io&quot; languageCode = &quot;en-us&quot; title = &quot;reber-9's Blog&quot; theme = &quot;beautifulhugo&quot; pygmentsUseClasses = false #disqusShortname = &quot;XXX&quot; #googleAnalytics = &quot;XXX&quot; [Params] logo = &quot;img/avatar-icon.png&quot; subtitle = &quot;This is my personal blog&quot; [Author] name = &quot;Some Person&quot; email = &quot;123123123@163.
+ 使用主题并查看效果   0x02 本地环境配置  本地生成秘钥  在github保存秘钥  测试公钥是否添加成功  设置本地用户名和邮箱   0x03 配置config.toml # 将reber全部替换为你github的账户名，另外你也可以进行一些基本的设置 baseurl = &quot;http://reber.github.io&quot; languageCode = &quot;en-us&quot; title = &quot;reber's Blog&quot; theme = &quot;beautifulhugo&quot; pygmentsUseClasses = false #disqusShortname = &quot;XXX&quot; #googleAnalytics = &quot;XXX&quot; [Params] logo = &quot;img/avatar-icon.png&quot; subtitle = &quot;This is my personal blog&quot; [Author] name = &quot;Some Person&quot; email = &quot;123123123@163.
     </p>
 
     
