--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div>
       <span>Tags:</span>
       
-        <a href="/tags/deserialize">deserialize</a>
+        <a href="/tags/%E5%8F%8D%E5%BA%8F%E5%88%97%E5%8C%96">反序列化</a>
     </div>
   
 </div>
@@ -152,7 +152,7 @@
     <div>
       <span>Tags:</span>
       
-        <a href="/tags/deserialize">deserialize</a>
+        <a href="/tags/%E5%8F%8D%E5%BA%8F%E5%88%97%E5%8C%96">反序列化</a>
     </div>
   
 </div>
