--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <div>
       <span>Tags:</span>
       
-        <a href="/tags/javascript">javascript</a>
+        <a href="/tags/js">js</a>
     </div>
   
 </div>
