--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <div>
       <span>Tags:</span>
       
-        <a href="/tags/injection">injection</a>
+        <a href="/tags/SQL%E6%B3%A8%E5%85%A5">SQL注入</a>
     </div>
   
 </div>
@@ -274,7 +274,7 @@
     <div>
       <span>Tags:</span>
       
-        <a href="/tags/pentest">pentest</a>
+        <a href="/tags/%E7%9B%AE%E5%BD%95%E9%81%8D%E5%8E%86">目录遍历</a>
     </div>
   
 </div>
