--- a/friends/index.html
+++ b/friends/index.html
@@ -75,7 +75,7 @@
 	<main>
     <h1>Friends</h1>
     <ul>
-<li><a href="https://www.yl0.org/?_blank">sòng•sec</a></li>
+<li><a href="https://www.yl0.org/?_blank">信安未央</a></li>
 <li><a href="https://y-hkl.github.io/?_blank">Y-HKL&rsquo;s Blog</a></li>
 <li><a href="http://www.test404.com/?_blank">Test404&rsquo;s Blog</a></li>
 <li><a href="http://zksmile.me/?_blank">Zksmile&rsquo;s Blog</a></li>
