--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@
 </ul>
 <h3 id="e-mail">E-mail</h3>
 <ul>
-<li>reber0ask#protonmail.com</li>
+<li>reber0ask#qq.com</li>
 </ul>
 <h3 id="wechat--qq">WeChat &amp; QQ</h3>
 <!-- raw HTML omitted -->
